added global exception handling in remaining services and updates the junit test files for all services