@@ -1,10 +1,14 @@
 package com.audible.bookCartMS;
 
-
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -13,89 +17,134 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.dao.DataAccessException;
 
+import com.audible.bookCartMS.exception.ResourceNotFoundException;
 import com.audible.bookCartMS.model.Order;
 import com.audible.bookCartMS.repository.OrderRepository;
 import com.audible.bookCartMS.service.OrderServiceImpl;
 
 class OrderServiceTest {
 
-    @Mock
-    private OrderRepository orderRepository;
+	@Mock
+	private OrderRepository orderRepository;
 
-    @InjectMocks
-    private OrderServiceImpl orderServiceImpl;
+	@InjectMocks
+	private OrderServiceImpl orderService;
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-    }
+	private Order sampleOrder;
 
-    @Test
-    void testPlaceOrder_Success() {
-        Order order = new Order("order123", 1, Arrays.asList(101, 102), 49.99);
+	@BeforeEach
+	void setUp() {
+		MockitoAnnotations.openMocks(this);
 
-        when(orderRepository.save(order)).thenReturn(order);
+		sampleOrder = new Order();
+		sampleOrder.setOrderId("order123");
+		sampleOrder.setUserId(1);
+//        sampleOrder.setTotalPrice(99.99);
+	}
 
-        Order result = orderServiceImpl.placeOrder(order);
+	@Test
+	void placeOrder_ShouldSaveAndReturnOrder() {
+		when(orderRepository.save(sampleOrder)).thenReturn(sampleOrder);
 
-        assertThat(result).isNotNull();
-        assertThat(result.getOrderId()).isEqualTo("order123");
-        assertThat(result.getTotalAmount()).isEqualTo(49.99);
-    }
+		Order result = orderService.placeOrder(sampleOrder);
 
-    @Test
-    void testGetAllOrders_Success() {
-        List<Order> orders = Arrays.asList(
-            new Order("order1", 1, Arrays.asList(101), 19.99),
-            new Order("order2", 2, Arrays.asList(102), 29.99)
-        );
+		assertNotNull(result);
+		assertEquals("order123", result.getOrderId());
+		verify(orderRepository).save(sampleOrder);
+	}
 
-        when(orderRepository.findAll()).thenReturn(orders);
+	@Test
+	void placeOrder_ShouldThrow_WhenOrderIsNull() {
+		assertThrows(IllegalArgumentException.class, () -> orderService.placeOrder(null));
+	}
 
-        List<Order> result = orderServiceImpl.getAllOrders();
+	@Test
+	void placeOrder_ShouldThrow_OnDataAccessException() {
+		when(orderRepository.save(sampleOrder)).thenThrow(mock(DataAccessException.class));
 
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).getOrderId()).isEqualTo("order1");
-    }
+		assertThrows(RuntimeException.class, () -> orderService.placeOrder(sampleOrder));
+	}
 
-    @Test
-    void testGetOrdersByUser_Success() {
-        int userId = 1;
-        List<Order> userOrders = Arrays.asList(
-            new Order("order1", userId, Arrays.asList(101), 19.99),
-            new Order("order3", userId, Arrays.asList(103), 39.99)
-        );
+	@Test
+	void getAllOrders_ShouldReturnOrdersList() {
+		List<Order> orders = List.of(sampleOrder);
+		when(orderRepository.findAll()).thenReturn(orders);
 
-        when(orderRepository.findByUserId(userId)).thenReturn(userOrders);
+		List<Order> result = orderService.getAllOrders();
 
-        List<Order> result = orderServiceImpl.getOrdersByUser(userId);
+		assertEquals(1, result.size());
+		verify(orderRepository).findAll();
+	}
 
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).getUserId()).isEqualTo(userId);
-    }
+	@Test
+	void getAllOrders_ShouldThrow_WhenEmpty() {
+		when(orderRepository.findAll()).thenReturn(Collections.emptyList());
 
-    @Test
-    void testGetOrderById_Success() {
-        String orderId = "order123";
-        Order order = new Order(orderId, 1, Arrays.asList(101, 102), 49.99);
+		assertThrows(ResourceNotFoundException.class, () -> orderService.getAllOrders());
+	}
 
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(order));
+	@Test
+	void getAllOrders_ShouldThrow_OnDataAccessException() {
+		when(orderRepository.findAll()).thenThrow(mock(DataAccessException.class));
 
-        Optional<Order> result = orderServiceImpl.getOrderById(orderId);
+		assertThrows(RuntimeException.class, () -> orderService.getAllOrders());
+	}
 
-        assertThat(result).isPresent();
-        assertThat(result.get().getOrderId()).isEqualTo(orderId);
-    }
+	@Test
+	void getOrdersByUser_ShouldReturnUserOrders() {
+		List<Order> userOrders = List.of(sampleOrder);
+		when(orderRepository.findByUserId(1)).thenReturn(userOrders);
 
-    @Test
-    void testGetOrderById_NotFound() {
-        String orderId = "nonexistent";
+		List<Order> result = orderService.getOrdersByUser(1);
 
-        when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+		assertEquals(1, result.size());
+		assertEquals(1, result.get(0).getUserId());
+		verify(orderRepository).findByUserId(1);
+	}
 
-        Optional<Order> result = orderServiceImpl.getOrderById(orderId);
+	@Test
+	void getOrdersByUser_ShouldThrow_WhenEmpty() {
+		when(orderRepository.findByUserId(2)).thenReturn(Collections.emptyList());
 
-        assertThat(result).isEmpty();
-    }
+		assertThrows(ResourceNotFoundException.class, () -> orderService.getOrdersByUser(2));
+	}
+
+	@Test
+	void getOrdersByUser_ShouldThrow_OnDataAccessException() {
+		when(orderRepository.findByUserId(1)).thenThrow(mock(DataAccessException.class));
+
+		assertThrows(RuntimeException.class, () -> orderService.getOrdersByUser(1));
+	}
+
+	@Test
+	void getOrderById_ShouldReturnOrder() {
+		when(orderRepository.findById("order123")).thenReturn(Optional.of(sampleOrder));
+
+		Optional<Order> result = orderService.getOrderById("order123");
+
+		assertTrue(result.isPresent());
+		assertEquals("order123", result.get().getOrderId());
+	}
+
+	@Test
+	void getOrderById_ShouldThrow_WhenNotFound() {
+		when(orderRepository.findById("invalid")).thenReturn(Optional.empty());
+
+		assertThrows(ResourceNotFoundException.class, () -> orderService.getOrderById("invalid"));
+	}
+
+	@Test
+	void getOrderById_ShouldThrow_WhenIdIsNullOrEmpty() {
+		assertThrows(IllegalArgumentException.class, () -> orderService.getOrderById(null));
+		assertThrows(IllegalArgumentException.class, () -> orderService.getOrderById("   "));
+	}
+
+	@Test
+	void getOrderById_ShouldThrow_OnDataAccessException() {
+		when(orderRepository.findById("order123")).thenThrow(mock(DataAccessException.class));
+
+		assertThrows(RuntimeException.class, () -> orderService.getOrderById("order123"));
+	}
 }
